--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,734 @@
 @import url("normalaize.css");
+@import url("./fonts.css");
 .container {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 152px 1fr 30px;
+      grid-template-rows: 152px 1fr 30px;
+  justify-items: center;
   background-color: #fff;
   height: 100%;
   width: 100%;
+}
+
+.container .header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 100px 1px 50px 1px;
+      grid-template-rows: 100px 1px 50px 1px;
+  justify-items: center;
+  width: 100%;
+  font-family: "Montserrat-SemiBold", sans-serif;
+  font-size: 14px;
+}
+
+.container .header .title {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1160px;
+}
+
+.container .header .title .header-logo {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 265px;
+}
+
+.container .header .title .header-logo-img1 {
+  width: 70px;
+  height: 70px;
+  background: url("../img/logo.png");
+}
+
+.container .header .title .header-logo-img2 {
+  width: 185px;
+  height: 35px;
+  background: url("../img/telegram-cloud-document-2-5280975677015725228 2.png");
+}
+
+.container .header .title .header-title-btn {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+  width: 240px;
+  background-color: rgba(45, 166, 221, 0.2);
+  border-radius: 999px;
+  font-size: 14px;
+  color: #254152;
+  cursor: default;
+}
+
+.container .header .title .header-phone {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 30px 1fr;
+      grid-template-columns: 30px 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  -ms-grid-column-align: end;
+      justify-self: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 260px;
+}
+
+.container .header .title .header-phone-img {
+  height: 30px;
+  width: 30px;
+  background: url("../img/phone.png");
+  background-size: cover;
+}
+
+.container .header .title .header-phone-text {
+  font-family: "Montserrat-Bold";
+  font-size: 22px;
+}
+
+.container .header .menu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr max-content;
+      grid-template-columns: 1fr -webkit-max-content;
+      grid-template-columns: 1fr max-content;
+  gap: 60px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1160px;
+  text-transform: uppercase;
+}
+
+.container .header .menu .menu-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (max-content)[7];
+      grid-template-columns: repeat(7, -webkit-max-content);
+      grid-template-columns: repeat(7, max-content);
+  gap: 25px;
+  list-style: none;
+}
+
+.container .header .menu .menu-btn {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25px 1fr;
+      grid-template-columns: 25px 1fr;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 35px;
+  width: 165px;
+  padding: 0 10px;
+  background-color: #bcd249;
+  border-radius: 30px;
+}
+
+.container .header .menu .menu-btn-img {
+  height: 25px;
+  width: 25px;
+  background-image: url("../img/svg 1.svg");
+}
+
+.container .header .gray_line {
+  height: 1px;
+  width: 100%;
+  background-color: rgba(37, 65, 82, 0.15);
+}
+
+.container .gallary {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 470px;
+  width: 1300px;
+  margin-top: 40px;
+  background-image: url("../img/Rectangle 5.jpg");
+}
+
+.container .gallary .gallary-content {
+  margin-left: 70px;
+}
+
+.container .gallary .gallary-content-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+  width: 800px;
+}
+
+.container .gallary .gallary-content-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+  width: 560px;
+}
+
+.container .gallary-drops {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  width: 50px;
+  margin-top: 20px;
+}
+
+.container .gallary-drops-item {
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
+  background-color: #c4c4c4;
+}
+
+.container .gallary-drops-item-active {
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
+  background-color: #2da6dd;
+}
+
+.container .numbers {
+  margin-top: 80px;
+  width: 1160px;
+}
+
+.container .numbers .title-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+}
+
+.container .numbers .title-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .numbers .cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+}
+
+.container .numbers .cards-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  height: 120px;
+  width: 260px;
+}
+
+.container .numbers .cards-item-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  font-size: 72px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+}
+
+.container .numbers .cards-item-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 10px;
+}
+
+.container .advantages {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  margin-top: 140px;
+  width: 100%;
+  background-color: #e7f2f9;
+}
+
+.container .advantages .title {
+  margin-top: 100px;
+  width: 1160px;
+}
+
+.container .advantages .title-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+}
+
+.container .advantages .title-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .advantages .cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+  margin-bottom: 100px;
+  width: 1160px;
+}
+
+.container .advantages .cards-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[3];
+      grid-template-rows: repeat(3, -webkit-max-content);
+      grid-template-rows: repeat(3, max-content);
+  justify-items: center;
+  width: 260px;
+}
+
+.container .advantages .cards-item-img1, .container .advantages .cards-item-img2, .container .advantages .cards-item-img3, .container .advantages .cards-item-img4 {
+  height: 75px;
+  width: 75px;
+}
+
+.container .advantages .cards-item-img1 {
+  background-image: url("../img/Frame 32.png");
+}
+
+.container .advantages .cards-item-img2 {
+  background-image: url("../img/Frame 33.png");
+}
+
+.container .advantages .cards-item-img3 {
+  background-image: url("../img/Frame 34.png");
+}
+
+.container .advantages .cards-item-img4 {
+  background-image: url("../img/Frame 35.png");
+}
+
+.container .advantages .cards-item-text_big {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  margin-top: 40px;
+  font-family: "Montserrat-Bold";
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  font-size: 18px;
+  text-align: center;
+}
+
+.container .advantages .cards-item-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.container .video_review {
+  margin-top: 140px;
+  width: 1160px;
+}
+
+.container .video_review .title-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+}
+
+.container .video_review .title-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .video_review .review {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 760px 1fr;
+      grid-template-columns: 760px 1fr;
+}
+
+.container .video_review .review .video {
+  height: 425px;
+  width: 760px;
+  background-image: url("../img/video.jpg");
+}
+
+.container .video_review .review .description {
+  padding-left: 40px;
+}
+
+.container .video_review .review .description-title {
+  font-family: "Montserrat-Bold";
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  font-size: 16px;
+}
+
+.container .video_review .review .description-text {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .video_review .review .description-link {
+  margin-top: 40px;
+}
+
+.container .video_review .review .description-link a {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #2da6dd;
+}
+
+.container .cost_comparison {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  margin-top: 140px;
+  width: 100%;
+  background-color: #e7f2f9;
+}
+
+.container .cost_comparison .title {
+  margin-top: 100px;
+  width: 1160px;
+}
+
+.container .cost_comparison .title-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+}
+
+.container .cost_comparison .title-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .cost_comparison .cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (max-content)[3];
+      grid-template-columns: repeat(3, -webkit-max-content);
+      grid-template-columns: repeat(3, max-content);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+  width: 1160px;
+}
+
+.container .cost_comparison .cards-item {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[3];
+      grid-template-rows: repeat(3, -webkit-max-content);
+      grid-template-rows: repeat(3, max-content);
+  justify-items: center;
+  width: 300px;
+}
+
+.container .cost_comparison .cards-item-img1, .container .cost_comparison .cards-item-img2, .container .cost_comparison .cards-item-img3 {
+  height: 300px;
+  width: 300px;
+}
+
+.container .cost_comparison .cards-item-img1 {
+  background-image: url("../img/Rectangle 61.png");
+}
+
+.container .cost_comparison .cards-item-img2 {
+  background-image: url("../img/Rectangle 60.png");
+}
+
+.container .cost_comparison .cards-item-img3 {
+  background-image: url("../img/Rectangle 59.png");
+}
+
+.container .cost_comparison .cards-item-text_big {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  height: 95px;
+  margin-top: 40px;
+  font-family: "Montserrat-SemiBold";
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #254152;
+}
+
+.container .cost_comparison .cards-item-text_small {
+  margin-top: 20px;
+  text-align: center;
+  font-family: "Montserrat-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 120%;
+  letter-spacing: 0.02em;
+  color: #2da6dd;
+}
+
+.container .cost_comparison .title_small {
+  margin-top: 90px;
+  font-family: "Montserrat-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #254152;
+}
+
+.container .cost_comparison .list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (max-content)[3];
+      grid-template-columns: repeat(3, -webkit-max-content);
+      grid-template-columns: repeat(3, max-content);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 40px;
+  margin-bottom: 100px;
+  width: 1160px;
+}
+
+.container .cost_comparison .list-item {
+  padding-left: 30px;
+  width: 300px;
+}
+
+.container .cost_comparison .list-item-ls {
+  list-style: url("../img/circle.svg");
+}
+
+.container .cost_comparison .list-item-ls li {
+  margin-top: 20px;
+  font-family: "Montserrat-SemiBold";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+}
+
+.container .cost_comparison .list-item-link {
+  margin-top: 40px;
+}
+
+.container .cost_comparison .list-item-link a {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #2da6dd;
+}
+
+.container .our_works {
+  margin-top: 120px;
+  width: 1160px;
+}
+
+.container .our_works .title {
+  margin-top: 100px;
+  width: 1160px;
+}
+
+.container .our_works .title-text_big {
+  font-family: "Montserrat-Bold";
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 118%;
+  text-transform: uppercase;
+  color: #254152;
+}
+
+.container .our_works .title-text_small {
+  font-family: "Montserrat-Regular";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 140%;
+  letter-spacing: 0.02em;
+  color: #254152;
+  margin-top: 20px;
+}
+
+.container .our_works-gallary {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  margin-top: 80px;
+  margin-bottom: 140px;
+}
+
+.container .our_works-gallary-img {
+  position: relative;
+  height: 500px;
+  width: 960px;
+  background-image: url("../img/big_img.jpg");
+  background-size: cover;
+}
+
+.container .our_works-gallary-img-left {
+  position: absolute;
+  top: 230px;
+  left: 20px;
+  height: 40px;
+  width: 40px;
+  background-image: url("../img/arrow_left.png");
+}
+
+.container .our_works-gallary-img-right {
+  position: absolute;
+  top: 230px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+  background-image: url("../img/arrow_right.png");
+}
+
+.container .our_works-gallary-carousel {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100px 100px;
+      grid-template-columns: 100px 100px;
+  gap: 20px;
+  margin-top: 20px;
+  height: 100px;
+  width: 960px;
+}
+
+.container .our_works-gallary-carousel-img1 {
+  height: 100px;
+  width: 100px;
+  background-image: url("../img/small_img1.jpg");
+}
+
+.container .our_works-gallary-carousel-img2 {
+  height: 100px;
+  width: 100px;
+  background-image: url("../img/small_img2.jpg");
 }
